--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,12 +9,16 @@ on:
 #    - deploy
 #  workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ${{ env.tf_actions_working_dir }}
 
 permissions: 
   contents: read
  
 env:
   CURRENT_BRANCH: ${{ github.head_ref || github.ref_name }}
+  TF_ACTION_WORKING_DIR: 'Terraform'
 
 jobs:
   tf-validate:
@@ -24,7 +28,7 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      TF_ACTION_WORKING_DIR: 'Terraform'
+
     runs-on: ubuntu-latest
     environment: staging
 # Use the Bash shell regardless of whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
@@ -59,7 +63,7 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-      TF_ACTION_WORKING_DIR: 'Terraform'
+
     runs-on: ubuntu-latest
     environment: staging
 # Use the Bash shell regardless of whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
