--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,16 +9,11 @@ on:
 #    - deploy
 #  workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: ${{ env.tf_actions_working_dir }}
-
 permissions: 
   contents: read
  
 env:
   CURRENT_BRANCH: ${{ github.head_ref || github.ref_name }}
-  TF_ACTION_WORKING_DIR: 'Terraform'
 
 jobs:
   tf-validate:
@@ -48,6 +43,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        tf_actions_working_dir: 'Terraform'
 # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
@@ -79,6 +75,7 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        tf_actions_working_dir: 'Terraform'
 # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
