--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -9,6 +9,10 @@ on:
 #    - deploy
 #  workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ${{ env.tf_actions_working_dir }}
+
 permissions: 
   contents: read
  
@@ -43,7 +47,6 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-        tf_actions_working_dir: 'Terraform'
 # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
@@ -75,7 +78,6 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-        tf_actions_working_dir: 'Terraform'
 # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
