--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -11,7 +11,7 @@ on:
 
 defaults:
   run:
-    working-directory: ${{ env.tf_actions_working_dir }}
+    working-directory: ./Terraform
 
 permissions: 
   contents: read
