--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -34,7 +34,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: .Terraform
+        working-directory: 'Terraform'
     steps:
     - name: current branch
 #      run: echo running on branch ${{ github.ref_name }}
