--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -51,9 +51,11 @@ jobs:
 # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
+      working-directory: ./Terraform
 # Generates an execution plan for Terraform
     - name: Terraform Validate
       run: terraform validate
+      working-directory: ./Terraform
 
   tf-plan:
     name: 'Plan'
@@ -78,6 +80,7 @@ jobs:
 # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
+      working-directory: ./Terraform
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
