--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,9 @@ on:
 #    - staging
     - master
 
-#  pull_request:
-#    branches:
-#    - master
+  pull_request:
+    branches:
+    - master
 #  workflow_dispatch:
 
 permissions: 
